# implement-skill

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
docs/: design.md  hardening-backlog.md  overview.html
docs/superpowers/plans/: 2026-06-21-implement-m0-m1.md  2026-06-22-implement-m1.8-onboarding-config.md  2026-06-22-implement-m1.9-wiring.md  2026-06-22-m2-architect-phases.md  2026-06-22-m3-github-pr.md  2026-06-22-m4-guardrails.md  2026-06-22-m5-learned-router.md  2026-07-07-panel-continuity.md  2026-07-07-perf-pass.md
docs/superpowers/specs/: 2026-06-22-implement-onboarding-config-design.md  2026-06-22-m2-architect-phases-design.md  2026-06-22-m3-github-pr-design.md  (+2 more)
knowledge-base/: loop-techniques.md  model-priors.json  model-priors.md  swe-benchmarks.md
skills/implement/: SKILL.md
skills/solve/: SKILL.md
tests/: test_apply_patch.py  test_arch.py  test_backends.py  test_campaign.py  test_config.py  test_continuity.py  test_execute.py  test_features.py  test_gate.py  test_gh.py  test_guard.py  test_handoff.py  test_implement.py  test_intent.py  test_kb.py  test_kill.py  test_lean_integration.py  test_lean_support.py  test_no_committed_credentials.py  test_oracle.py  test_outcomes.py  test_panel.py  test_plan.py  test_preflight.py  test_profile.py  test_publish.py  test_resolvers.py  test_review.py  test_router.py  test_sandbox.py  test_scrub.py  test_seed.py  test_setup.py  test_smoke.py  test_suitability.py  test_team_dispatch.py  test_workspace.py
(+62 files in other folders)
